# chatbot

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  Dockerfile  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT_FINAL.md  README.md  WORKLOG.md  deploy.bat  emergency_deploy.py  gitattributes  list_models.py  main.py  package-lock.json  pyproject.toml  requirements.txt  run_indexer.py  start.sh  sync_notion.py  test_embedding.py  test_isolated.py  test_worker.py  utils.py  worker.py
.github/workflows/: daily_indexing.yml
static/: index.html  manifest.json  script.js  style.css
